@@ -27,8 +27,11 @@ validate_result (TestState *state)
 {
   GLubyte pixel[4];
   GLint y_off = state->stage_geom.height - 90;
+
   /* NB: glReadPixels is done in GL screen space so y = 0 is at the bottom */
-  g_print ("y_off = %d\n", y_off);
+  if (g_test_verbose ())
+    g_print ("y_off = %d\n", y_off);
+
   /* NB: We ignore the alpha, since we don't know if our render target is
    * RGB or RGBA */
 
@@ -38,17 +41,20 @@ validate_result (TestState *state)
 
   /* Should see a blue pixel */
   glReadPixels (10, y_off, 1, 1, GL_RGBA, GL_UNSIGNED_BYTE, &pixel);
-  g_print ("pixel 0 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
+  if (g_test_verbose ())
+    g_print ("pixel 0 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
   g_assert (pixel[RED] == 0 && pixel[GREEN] == 0 && pixel[BLUE] != 0);
   
   /* Should see a red pixel */
   glReadPixels (110, y_off, 1, 1, GL_RGBA, GL_UNSIGNED_BYTE, &pixel);
-  g_print ("pixel 1 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
+  if (g_test_verbose ())
+    g_print ("pixel 1 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
   g_assert (pixel[RED] != 0 && pixel[GREEN] == 0 && pixel[BLUE] == 0);
 
   /* Should see a blue pixel */
   glReadPixels (210, y_off, 1, 1, GL_RGBA, GL_UNSIGNED_BYTE, &pixel);
-  g_print ("pixel 2 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
+  if (g_test_verbose ())
+    g_print ("pixel 2 = %x, %x, %x\n", pixel[RED], pixel[GREEN], pixel[BLUE]);
   g_assert (pixel[RED] == 0 && pixel[GREEN] == 0 && pixel[BLUE] != 0);
   
 #undef RED
@@ -180,6 +186,7 @@ test_mesh_contiguous (TestConformSimpleFixture *fixture,
 
   cogl_mesh_unref (state.mesh);
 
-  g_print ("OK\n");
+  if (g_test_verbose ())
+    g_print ("OK\n");
 }
 
